Update the notification service description

--- a/modules/ROOT/pages/deployment/services/notifications.adoc
+++ b/modules/ROOT/pages/deployment/services/notifications.adoc
@@ -3,13 +3,11 @@
 
 :ext_name: notifications
 
-:description: The Infinite Scale Notification service provides ...
+:description: The notification service is responsible for sending emails to users informing them about events that happened.
 
 == Introduction
 
-{description}
-
-// fixme: source description is still missing, and a better description is needed
+{description} To do this, it hooks into the event system and listens for certain events that the users need to be informed about. As an example, when a user is added to a share, a notification email will be sent to the user.
 
 include::partial$deployment/services/beta-statement.adoc[]
 
