Apply suggestions from code review
Co-authored-by: Phil Davis <phil@jankaritech.com>

--- a/modules/ROOT/pages/deployment/general/ocis-init.adoc
+++ b/modules/ROOT/pages/deployment/general/ocis-init.adoc
@@ -14,11 +14,11 @@ In general, the xref:deployment/general/general-info.adoc#initialize-infinite-sc
 
 * When using the xref:deployment/container/container-setup.adoc[Container Setup], the command *runs automatically* when starting the container and no configuration file can be found. It skips the initialisation step if an `ocis.yaml` config file was found.
 
-* When using xref:deployment/container/orchestration/orchestration.adoc[Container Orchestration] like with Docker Compose or Kubernetes - Helm Charts, the `ocis init` command *MUST NOT* be used and all configuration parameters must be handed over either via environment variables and/or via the Helm Chart / yaml files. Use the provided Helm Charts as your configuration base and in case derive to Docker Compose.
+* When using xref:deployment/container/orchestration/orchestration.adoc[Container Orchestration] like with Docker Compose or Kubernetes - Helm Charts, the `ocis init` command *MUST NOT* be used and all configuration parameters must be handed over either via environment variables and/or via the Helm Chart / yaml files. Use the provided Helm Charts as your configuration base and adjust for Docker Compose as needed.
 
 == When to Not Use
 
-Whenever there is a change in the existing configuration, independent if `ocis init` was run before, `ocis init` will:
+Whenever there is a change in the existing configuration, independent of if `ocis init` was run before, `ocis init` will:
 
 * *fail* if it finds an existing `ocis.yaml` file.
 * *not update* any existing configuration.
@@ -26,6 +26,6 @@ Whenever there is a change in the existing configuration, independent if `ocis i
 
 == How to Apply Changes
 
-* When there are changes post running `ocis init` - if applicapable, these changes must be applied via environment variables and/or yaml files to take effect.
+* When there are changes needed post running `ocis init`, these changes must be applied via environment variables and/or yaml files to take effect.
 
 * To see which configurations are available, see the xref:deployment/services/services.adoc[services] descriptions.
