--- a/modules/ROOT/pages/prerequisites/prerequisites.adoc
+++ b/modules/ROOT/pages/prerequisites/prerequisites.adoc
@@ -404,4 +404,5 @@ Spaces will work with the upcoming client versions:
 * iOS app 12.0
 * Android app 3.0
 
-Pre-release versions for Desktop and iOS are already available here:
+Pre-release versions for https://github.com/owncloud/client/releases?q=v3.&expanded=true[Desktop] and https://owncloud.com/beta-testing/#ios[iOS] are already available for testing.
+
